Fixed layout issues with remove button in link picker

--- a/src/css/boom/dialog.less
+++ b/src/css/boom/dialog.less
@@ -29,6 +29,10 @@
 		.b-button {
 			text-indent: -1000%;
 			overflow: hidden;
+
+			&.b-button-withtext {
+				text-indent: 0;
+			}
 		}
 	}
 
